--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "moment": "^2.29.4",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-datetime-picker": "^5.2.0",
