--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^10.12.16",
     "moment": "^2.29.4",
     "next": "13.4.4",
     "react": "18.2.0",
+    "react-calendar": "^4.2.1",
     "react-datetime-picker": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
