--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-calendar": "^4.2.1",
     "react-datetime-picker": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-toastify": "^9.1.3",
     "typescript": "5.0.4"
   },
   "devDependencies": {
